1/23/14 RatioNode: reduce lots of Vector2 allocations by computing x and y coordinates separately
1/23/14 fix Reset All so that it fills 0.5L
1/23/14 center controls under beaker, because it looks better and we have room for i18n now
1/23/14 move linear graph to Solutions screen
1/23/14 rounded corners on pH probe tip
1/23/14 add a probe to pH meter that extends to bottom of beaker
1/23/14 combine SolutionsPHMeterNode and CustomPHMeterNode into a single meter that optionally allows you to change pH
1/23/14 Custom: make beaker same size and location as Solutions screen
1/23/14 Solutions: make beaker wider, scale up 'Molecule count' feature
1/23/14 Solutions: remove code related to aligning scales of graph and pH meter, since the pH meter no longer has a scale
1/23/14 Solutions: remove scale from pH meter
1/23/14 revert: Custom: don't collapse meter when collapse button is pressed, just hide pH picker
1/23/14 Custom: remove dropper and drain, use a fixed volume of solution
1/23/14 Custom: don't collapse meter when collapse button is pressed, just hide pH picker
1/23/14 fix: initial graph layout got hosed by non-zero initial volume
1/23/14 Basics: auto-fill with a specified volume when a solute is selected. Set this to 0L for ph-scale-basics, 0.5L for ph-scale.
1/23/14 fix: pH picker doesn't always disable properly at end of range, causes pH to exceed range
1/23/14 require non-zero volume to be at least 0.1L, same as precision of volume indicator on beaker
1/23/14 make pH picker advance faster when held (reduced intervalDelay to 40ms from 100ms)
1/23/14 shorter points on graph indicators, move indicators closer to scale, less whitespace between scale and indicators (ok to overlap ticks)
1/23/14 move 'Reset All' buttons to same position (lower right) in all screens
1/23/14 add temporary icon for 'Basics' screen
1/23/14 move ph-scale-basics sim title to ph-scale-basics-strings_en.json
1/23/13 make 'Basics' screen an official part of ph-scale sim